# Arena

./: .firebaserc  .gitignore  CHANGELOG.md  COMMANDS.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  firebase.dev.json  firebase.prod.json
backend/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  run.sh  setup.sh  start.sh
backend/docs/: backend_overview.md
backend/scripts/: backfill_verdicts.py
backend/src/arena/: __init__.py  main.py  state_manager.py
backend/src/arena/agents/: __init__.py  base_agent.py  base_worker.py  builder_agent.py  cross_exam_agent.py  customer_agent.py  interview_agent.py  judge_agent.py  market_agent.py  skeptic_agent.py
backend/src/arena/auth/: dependencies.py  firebase.py  jwt.py
backend/src/arena/billing/: credits.py
backend/src/arena/config/: settings.py
backend/src/arena/eval/: run.py
backend/src/arena/grounding/: __init__.py  google_search.py
backend/src/arena/interviews/: personas.py
backend/src/arena/llm/: __init__.py  gemini_client.py  prd_extractor.py  prompts.py  rate_control.py
backend/src/arena/ml/: ranking.py
backend/src/arena/models/: __init__.py  debate_state.py  decision_evidence.py  evidence.py  idea.py  user.py  verdict.py
backend/src/arena/monitoring/: metrics.py
backend/src/arena/observability/: __init__.py  eval.py  langsmith_config.py  tracing.py
backend/src/arena/redis/: __init__.py  (+2 more)
backend/tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_integration.py  test_models.py  test_tracing.py
(+71 files in other folders)
